--- a/src/components/Home/HomeTheFeed.css
+++ b/src/components/Home/HomeTheFeed.css
@@ -1,16 +1,9 @@
 .the-feed {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(auto-fill, 338px);
+    grid-template-rows: repeat(1, 264px);
     grid-auto-rows: 0;
+    grid-column-gap: 25px;
+    margin: 0 40px;
     overflow-y: hidden;
-}
-
-.feed-item {
-    border: 1px solid red;
-    margin: 0 15px;
-    padding: 7px;
-    background: no-repeat top center;
-    background-size: contain;
-    color: white;
 }
