Loads of changes for homepage.

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,6 @@
 header {
-    color: green;
+    max-width: 1366px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: min-content 1fr max-content;
 }
