--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,900|Unna:400,400i,700,700i');
+
+body {
+  font-size: 62.5%;
+}
+
 .App {
   text-align: center;
 }
