--- a/src/components/Home/HomeEditor.css
+++ b/src/components/Home/HomeEditor.css
@@ -1,7 +1,37 @@
-
-
-.editor {
-    background-color: white;
+.home-editor__wrapper {
     display: grid;
-    border-bottom: 3px solid blue;
+  grid-template-columns: 1fr;
+
+}
+
+.home-editor__headshot {
+  width: 80%;
+  justify-self: center;
+}
+
+.home-editor__meta-wrapper {
+  border-bottom: 3px solid #006bff;
+  text-align: left;
+  background-color: white;
+  padding: 30px;
+}
+
+.home-editor__name {
+  color: black;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  font-family: 'Unna', serif;
+  margin: 5px 0;
+}
+
+.home-editor__title {
+  color: #006bff;
+  text-transform: uppercase;
+  font-size: 0.6rem;
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.home-editor__social-wrapper {
+  color: #006bff;
 }
