--- a/src/components/Home/HomeEditors.css
+++ b/src/components/Home/HomeEditors.css
@@ -1,8 +1,38 @@
+.editors__wrapper {
+}
+
+.editors__title-wrapper {
+  display: flex;
+  align-items: center;
+  margin-left: 20%;
+}
+
+.editors__title {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.9rem;
+  margin: 0;
+}
+
+.editors__title--subtitle {
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  font-weight: normal;
+  line-height: 1.9rem;
+  border-top: 1px solid #D8D8D8;
+  border-bottom: 1px solid #D8D8D8;
+  margin-left: 20px;
+}
+
 .editors__container {
     display: grid;
     grid-template-columns: repeat(3, minmax(250px, 300px));
-    background-color: lightblue;
+    background-color: #EAF3FF;
     grid-gap: 40px;
-    margin: 60px 40px;
+    margin: -31px 40px 60px;
     justify-content: center;
+    padding: 40px;
 }
