--- a/src/components/Home/HomeForum.css
+++ b/src/components/Home/HomeForum.css
@@ -1,7 +1,43 @@
+.home-forum__wrapper {
+  display: grid;
+  grid-template-rows: 1fr min-content;
+  --aspect-ratio: .734421365;
+  background-size: cover;
+  border-radius: 5px;
+}
 
+.home-forum__wrapper::before {
+  height: 0;
+  content: "";
+  display: inline-block;
+  padding-bottom: calc(100% * var(--aspect-ratio));
+  grid-area: 1/1/-1/-1;
+}
 
-.editor {
-    background-color: white;
-    display: grid;
-    border-bottom: 3px solid blue;
+.forum_meta-container {
+    grid-area: 2/1/3/2;
+  padding: 40px;
+  text-align: left;
+}
+
+.forum_meta-container h3 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  color: white;
+  text-transform: uppercase;
+  font-size: 2.6rem;
+  line-height: 2.6rem;
+  text-align: left;
+  margin: 15px 0;
+}
+
+.forum_tag {
+  display: inline-block;
+  color: #9354A1;
+  background-color: white;
+  border-radius: 5px;
+  padding: 7px 16px;
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: bold;
 }
