--- a/src/components/PrimeStories/PrimeStoryHero.css
+++ b/src/components/PrimeStories/PrimeStoryHero.css
@@ -2,17 +2,42 @@
 }
 
 .prime-story-hero__image {
+    grid-area: 1/1/-1/-1;
     width: 100%;
 }
 
 .hero-meta {
-    display: flex;
-    flex-direction: column;
+    grid-area: 2/2/3/3;
     background-color: #006BFF;
     text-align: left;
     color: black;
-    width: 80%;
-    margin: -130px auto 0;
-    padding: 14px;
     border-radius: 4px 4px 0 0;
+    margin-bottom: -20px;
+    display: grid;
+    padding: 24px 80px;
+    grid-template-columns: 1fr;
+    grid-template-areas: "time" "title" "subtitle" "author";
+}
+
+.hero-meta .prime-story__name {
+    font-family: 'Unna', serif;
+    font-weight: bold;
+    font-size: 2.8rem;
+    line-height: 2.6rem;
+    letter-spacing: 1px;
+    margin: 14px 0;
+}
+
+.hero-meta .author {
+    grid-area: author;
+    text-align: right;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+}
+
+.hero-meta time {
+    grid-area: time;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.8rem;
 }
