--- a/src/components/Home/HomePrimeStories.css
+++ b/src/components/Home/HomePrimeStories.css
@@ -1,20 +1,18 @@
 .prime-stories {
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-    grid-gap: 30px;
-    padding: 30px;
-}
-
-.prime-story-hero {
-    grid-area: 1/1/2/-1;
-    display: grid;
-    grid-template-columns: 5% 1fr 5%;
-    grid-template-rows: 1fr min-content;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas:
+    "hero hero hero"
+    "title title title"
+    "second second ."
+    ". . .";
+  grid-gap: 30px;
+  padding: 30px;
 }
 
 .prime-stories__heading {
-  grid-area: 2/1/3/-1;
+  grid-area: title;
   display: flex;
   align-items: center;
   margin-left: calc(20% - 110px);
@@ -47,6 +45,28 @@
   margin-left: 20px;
 }
 
-.prime-story--wide {
-    grid-area: 3/1/4/span 2;
+@media only screen and (max-width: 900px) {
+  .prime-stories {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "hero hero"
+      "title title"
+      "second second"
+      ". .";
+    grid-gap: 20px;
+    padding: 20px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .prime-stories {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "hero"
+      "title"
+      "second"
+      ".";
+    grid-gap: 20px;
+    padding: 20px;
+  }
 }
