--- a/src/components/PrimeStories/PrimeStory.css
+++ b/src/components/PrimeStories/PrimeStory.css
@@ -1,9 +1,40 @@
 .prime-story {
 }
 
-.prime-story--wide {
+.prime-story--second {
+    grid-area: second;
     display: grid;
     background-size: cover;
+}
+
+@media only screen and (max-width: 900px) {
+
+  .prime-story--second {
+    --aspect-ratio: 2/3;
+  }
+
+  .prime-story--second::before {
+    height: 0;
+    content: "";
+    display: inline-block;
+    padding-bottom: calc(100% * var(--aspect-ratio));
+    grid-area: 1/1/-1/-1;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+
+  .prime-story--second {
+    --aspect-ratio: 3/2;
+  }
+
+  .prime-story--second::before {
+    height: 0;
+    content: "";
+    display: inline-block;
+    padding-bottom: calc(100% * var(--aspect-ratio));
+    grid-area: 1/1/-1/-1;
+  }
 }
 
 .prime-story--tall {
