--- a/src/components/PrimeStories/PrimeStoryHero.css
+++ b/src/components/PrimeStories/PrimeStoryHero.css
@@ -1,4 +1,8 @@
-.prime-story--hero {
+.prime-story-hero {
+    grid-area: hero;
+    display: grid;
+    grid-template-columns: 5% 1fr 5%;
+    grid-template-rows: 1fr min-content;
 }
 
 .prime-story-hero__image {
