--- a/src/components/PrimeStories/PrimeStoryHero.css
+++ b/src/components/PrimeStories/PrimeStoryHero.css
@@ -3,11 +3,26 @@
     display: grid;
     grid-template-columns: 5% 1fr 5%;
     grid-template-rows: 1fr min-content;
+    background-image: var(--wide-bg-image);
+    background-size: cover;
+
+    --aspect-ratio: 2/3;
 }
 
-.prime-story-hero__image {
+@media only screen and (max-width: 600px) {
+
+    .prime-story-hero {
+        background-image: var(--tall-bg-image);
+        --aspect-ratio: 3/2;
+    }
+}
+
+.prime-story-hero::before {
+    height: 0;
+    content: "";
+    display: inline-block;
+    padding-bottom: calc(100% * var(--aspect-ratio));
     grid-area: 1/1/-1/-1;
-    width: 100%;
 }
 
 .hero-meta {
