--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,900|Unna:400,400i,700,700i');
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-size: 62.5%;
 }
