--- a/src/components/FeedPage/News.css
+++ b/src/components/FeedPage/News.css
@@ -13,8 +13,9 @@
 .page-title{
     display: flex;
     align-items: center;
-    margin-top:50px;
-    margin-left:135px
+    max-width: 1366px;
+    margin: 50px auto 0;
+    padding: 0 130px;
 }
 .main-title{
     color: rgba(0,0,0,0.9);
