--- a/src/components/SpecialSeriesAll/Story.css
+++ b/src/components/SpecialSeriesAll/Story.css
@@ -1,8 +1,10 @@
-.article-01{
-    background: url("images/assoc_stock.png")  no-repeat 100%;
+
+.inner-img{
+    grid-column: 1/4;
+    grid-row: 1/6;
 }
-.article-02{
-    background: url("images/forum_stock.png")  no-repeat 100%;
+.inner-img img{
+    height: 100%;
 }
 .article-main-boxs{
     display: grid;
@@ -15,7 +17,6 @@
     height: 394px;
 }
 .article-inner-box{
-    padding: 35px 42px;
     display: grid;
     text-decoration: none;
     background-color: rgba(0,0,0,0.3);
@@ -36,27 +37,27 @@
     line-height: 29px;
     grid-row: 1/2;
     grid-column: 1;
+    padding: 35px 42px;
 }
 .publication-name{
-    background: url("images/poona-gadgil-white.png")  no-repeat 100%;
-    background-size: 100%;
-    height: 39px;
-    width: 89px;
     grid-row: 3/3;
     grid-column: 2;
     align-self: end;
+    /*padding: 35px 42px;*/
 }
 .article-inner-box:hover .title-article{
     color: #000;
 }
-.article-inner-box:hover .publication-name{
-    background: url("images/poona-gadgil-black.png")  no-repeat 100%;
-    background-size: 100%;
-    height: 39px;
-    width: 89px;
-    grid-row: 3/3;
-    grid-column: 2;
+.article-box .black-img{
+    opacity: 0;
 }
+.article-box#story-block .black-img{
+    opacity: 1;
+}
+.article-box#story-block .white-img{
+    opacity: 0;
+}
+
 .articles-snippests{
     display: grid;
     grid-template-columns: 1fr 1fr 2fr 1fr;
