--- a/src/components/Association/HomeAssoc.module.scss
+++ b/src/components/Association/HomeAssoc.module.scss
@@ -1,26 +1,26 @@
-.home-assoc__wrapper {
+.wrapper {
   display: grid;
   grid-template-rows: 1fr min-content;
   --aspect-ratio: .734421365;
   background-size: cover;
   border-radius: 5px;
+
+  &::before {
+    height: 0;
+    content: "";
+    display: inline-block;
+    padding-bottom: calc(100% * var(--aspect-ratio));
+    grid-area: 1/1/-1/-1;
+  }
 }
 
-.home-assoc__wrapper::before {
-  height: 0;
-  content: "";
-  display: inline-block;
-  padding-bottom: calc(100% * var(--aspect-ratio));
-  grid-area: 1/1/-1/-1;
-}
-
-.assoc_meta-container {
+.meta {
   grid-area: 2/1/3/2;
   margin: 40px;
   text-align: left;
 }
 
-.assoc_meta-container h3 {
+.title {
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   color: white;
@@ -31,7 +31,7 @@
   margin: 15px 0;
 }
 
-.assoc_tag {
+.tag {
   display: inline-block;
     color: #9354A1;
     background-color: white;
