--- a/src/components/Forum/HomeForum.module.scss
+++ b/src/components/Forum/HomeForum.module.scss
@@ -1,26 +1,26 @@
-.home-forum__wrapper {
+.wrapper {
   display: grid;
   grid-template-rows: 1fr min-content;
   --aspect-ratio: .734421365;
   background-size: cover;
   border-radius: 5px;
+
+  &::before {
+    height: 0;
+    content: "";
+    display: inline-block;
+    padding-bottom: calc(100% * var(--aspect-ratio));
+    grid-area: 1/1/-1/-1;
+  }
 }
 
-.home-forum__wrapper::before {
-  height: 0;
-  content: "";
-  display: inline-block;
-  padding-bottom: calc(100% * var(--aspect-ratio));
-  grid-area: 1/1/-1/-1;
-}
-
-.forum_meta-container {
+.meta {
     grid-area: 2/1/3/2;
   padding: 40px;
   text-align: left;
 }
 
-.forum_meta-container h3 {
+.title {
   font-family: 'Montserrat', sans-serif;
   font-weight: 900;
   color: white;
@@ -31,7 +31,7 @@
   margin: 15px 0;
 }
 
-.forum_tag {
+.tag {
   display: inline-block;
   color: #9354A1;
   background-color: white;
