--- a/src/components/Editors/EditorCard.module.scss
+++ b/src/components/Editors/EditorCard.module.scss
@@ -1,22 +1,22 @@
-.home-editor__wrapper {
+.wrapper {
     display: grid;
   grid-template-columns: 1fr;
 
 }
 
-.home-editor__headshot {
+.headshot {
   width: 80%;
   justify-self: center;
 }
 
-.home-editor__meta-wrapper {
+.meta {
   border-bottom: 3px solid #006bff;
   text-align: left;
   background-color: white;
   padding: 30px;
 }
 
-.home-editor__name {
+.name {
   color: black;
   font-size: 1.2rem;
   text-transform: uppercase;
@@ -24,7 +24,7 @@
   margin: 5px 0;
 }
 
-.home-editor__title {
+.title {
   color: #006bff;
   text-transform: uppercase;
   font-size: 0.6rem;
@@ -32,11 +32,11 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-.home-editor__social-wrapper {
+.socialWrapper {
   display: flex;
 }
 
-.social-icon {
+.socialIcon {
   color: #006bff;
   margin-right: 8px;
   font-size: 16px;
