--- a/src/components/Editors/EditorCardsWrapper.module.scss
+++ b/src/components/Editors/EditorCardsWrapper.module.scss
@@ -1,13 +1,10 @@
-.editors__wrapper {
-}
-
-.editors__title-wrapper {
+.titleWrapper {
   display: flex;
   align-items: center;
   margin-left: 20%;
 }
 
-.editors__title {
+.title {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   text-transform: uppercase;
@@ -15,7 +12,7 @@
   margin: 0;
 }
 
-.editors__title--subtitle {
+.subtitle {
   font-family: 'Montserrat', sans-serif;
   color: black;
   text-transform: uppercase;
@@ -27,9 +24,9 @@
   margin-left: 20px;
 }
 
-.editors__container {
+.editorCardsWrapper {
     display: grid;
-    grid-template-columns: repeat(3, minmax(250px, 300px));
+    grid-template-columns: repeat(2, minmax(250px, 300px));
     background-color: #EAF3FF;
     grid-gap: 40px;
     margin: -31px 40px 60px;
