TP-54 Changes Sponsored Series masonry tile background image to 'cover'.

--- a/src/components/SponsoredSeries/SponsoredSeriesMasonryTile.module.scss
+++ b/src/components/SponsoredSeries/SponsoredSeriesMasonryTile.module.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: 1fr min-content;
   grid-template-areas: "title"  "logo";
+  background-size: cover;
 
   &::before {
     height: 0;
