TP-90 Adds gradient to stories bar on single editor page.

--- a/src/components/Editors/EditorBio.module.scss
+++ b/src/components/Editors/EditorBio.module.scss
@@ -85,6 +85,7 @@ $tp_color--primary: #006BFF;
   font-weight: bold;
   display: flex;
   justify-content: center;
+  background-image: linear-gradient(rgba(black, 0.08), white);
 
   p {
     align-self: center;
