--- a/src/components/SponsoredSeries/FeaturedSponsoredSeries.module.scss
+++ b/src/components/SponsoredSeries/FeaturedSponsoredSeries.module.scss
@@ -61,6 +61,11 @@ $seriesPrimaryColor: #F8AE0F;
   font-family: 'Unna', serif;
   font-size: 24px;
   margin: 0 0 20px 20px;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .exploreButton {
