--- a/src/components/SponsoredSeries/SponsoredSeriesMasonryTile.module.scss
+++ b/src/components/SponsoredSeries/SponsoredSeriesMasonryTile.module.scss
@@ -29,6 +29,11 @@
   justify-self: stretch;
   text-align: left;
   padding: 15px 0 0 15px;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .logo {
