--- a/src/components/SponsoredSeries/SponsoredSeriesAllMasonryWrapper.module.scss
+++ b/src/components/SponsoredSeries/SponsoredSeriesAllMasonryWrapper.module.scss
@@ -2,3 +2,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
 }
+
+.spinner {
+  font-size: 42px;
+  color: #006bff;
+}
