--- a/src/components/BTS/HomeBTS.css
+++ b/src/components/BTS/HomeBTS.css
@@ -49,7 +49,7 @@
 .bts_date-wrapper {
   display: flex;
   flex-direction: row;
-  align-items: start;
+  align-items: flex-start;
   justify-content: space-between;
   margin-bottom: 15px;
   border-top: 3px solid #006bff;
