--- a/src/components/Editors/EditorCardsWrapper.module.scss
+++ b/src/components/Editors/EditorCardsWrapper.module.scss
@@ -26,7 +26,7 @@
 
 .editorCardsWrapper {
     display: grid;
-    grid-template-columns: repeat(2, minmax(250px, 300px));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 300px));
     background-color: #EAF3FF;
     grid-gap: 40px;
     margin: -31px 40px 60px;
