TP-116 Changes routes on story tiles and prime story cards. Adds links to prime story titles. Styles prime story titles.

--- a/src/components/PrimeStories/PrimeStory.module.scss
+++ b/src/components/PrimeStories/PrimeStory.module.scss
@@ -78,6 +78,11 @@
     font-size: 1.7rem;
     font-family: 'Unna', serif;
     line-height: 1.7rem;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 .author {
