style button and position

--- a/src/components/SocialShare/ShareButton.module.scss
+++ b/src/components/SocialShare/ShareButton.module.scss
@@ -1,4 +1,10 @@
-.bars {
-  font-size: 20px;
+.buttonStyle {
+  font-size: 14px;
   cursor: pointer;
+  background-color: #006BFF;
+  color: #fff;
+  width: 100px;
+  font-weight: 700;
+  float: right;
+  margin-right: 5vw;
 }
