--- a/src/components/SocialShare/ShareButton.module.scss
+++ b/src/components/SocialShare/ShareButton.module.scss
@@ -1,10 +1,14 @@
 .buttonStyle {
+  position: relative;
   font-size: 16px;
+  padding: 2px 0px 2px 0px;
   color: #fff;
   font-weight: 700;
   cursor: pointer;
   background-color: #006BFF;
-  width: 100px;
+  width: 150px;
   float: right;
-  margin-right: 5vw;
+  margin-right: 3vw;
+  margin-top: -24px;
+  z-index: 10;
 }
