--- a/src/components/SocialShare/ShareMenu.module.scss
+++ b/src/components/SocialShare/ShareMenu.module.scss
@@ -33,3 +33,8 @@
     font-weight: bold;
   }
 }
+
+@media only screen and (max-width: 800px) {
+.socialMenu {display: none;}
+.navList {display: none;}
+}
