TP-102 Search form and button interactions.

--- a/src/components/PrimeStories/PrimeStory.module.scss
+++ b/src/components/PrimeStories/PrimeStory.module.scss
@@ -66,10 +66,11 @@
 }
 
 .date {
-    grid-area: date;
-    justify-self: end;
-    font-size: 0.7rem;
-    text-transform: uppercase;
+  grid-area: date;
+  justify-self: end;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 0.7rem;
+  text-transform: uppercase;
 }
 
 .title {
