Fixes link underline of title on homepage assoc and forum blocks.

--- a/src/components/Association/HomeAssoc.module.scss
+++ b/src/components/Association/HomeAssoc.module.scss
@@ -4,6 +4,7 @@
   --aspect-ratio: .734421365;
   background-size: cover;
   border-radius: 5px;
+  text-decoration: none;
 
   &::before {
     height: 0;
