--- a/src/components/Forum/HomeForum.module.scss
+++ b/src/components/Forum/HomeForum.module.scss
@@ -4,6 +4,7 @@
   --aspect-ratio: .734421365;
   background-size: cover;
   border-radius: 5px;
+  text-decoration: none;
 
   &::before {
     height: 0;
