--- a/src/components/Search/SearchForm.module.scss
+++ b/src/components/Search/SearchForm.module.scss
@@ -1,10 +1,51 @@
 .formWrapper {
+  transition: height 1s cubic-bezier(0, .52, 0, 1);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 
-  .open {
-    background-color: green;
+  &.open {
+    height: 100px;
+
+    .searchBox {
+      display: block;
+    }
+
+    .button {
+      display: block;
+    }
   }
 
-  .closed {
-    background-color: blue;
+  &.closed {
+    height: 0;
+
+    .searchBox {
+      display: none;
+    }
+
+    .button {
+      display: none;
+    }
   }
+}
+
+.searchBox {
+  width: 300px;
+  height: 40px;
+  border-radius: 7px;
+  font-size: 25px;
+  font-family: 'Montserrat', sans-serif;
+  padding-left: 7px;
+}
+
+.button {
+  height: 40px;
+  background-color: #006bff;
+  color: white;
+  margin-left: 15px;
+  font-size: 25px;
+  border-radius: 7px;
+  font-weight: bold;
+  font-family: Montserrat, sans-serif;
 }
