--- a/src/components/Search/SearchButton.module.scss
+++ b/src/components/Search/SearchButton.module.scss
@@ -1,3 +1,10 @@
 .button {
-  font-size: 20px;
+  font-size: 30px;
+  padding: 7px;
+  border-radius: 7px;
+
+  &.visible {
+    background-color: gray;
+    color: white;
+  }
 }
