--- a/src/components/Feed/HomeFeedItem.module.scss
+++ b/src/components/Feed/HomeFeedItem.module.scss
@@ -1,4 +1,4 @@
-.feed-item {
+.item {
     background-size: cover;
     color: white;
     display: grid;
@@ -7,9 +7,9 @@
     grid-template-rows: 1fr minmax(115px, max-content);
 }
 
-.feed-item__meta-container {
+.metaContainer {
     grid-area: 2/1/3/2;
-    background-color: rgb(0,0,0,0.3);
+    background-color: rgba(black, 0.3);
     display: grid;
     grid-template-rows: min-content 1fr;
     padding: 13px 17px;
@@ -17,12 +17,17 @@
     text-align: left;
 }
 
-.feed-item__published-date {
+.date {
     font-size: 0.9rem;
     text-transform: uppercase;
 }
 
-.feed-item__name {
+.title {
     font-size: 1.0rem;
     margin: 12px 0 0 0;
+
+    a {
+        text-decoration: none;
+        color: inherit;
+    }
 }
