--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -16,6 +16,11 @@
     grid-gap: 20px;
     margin: 40px;
 }
+.arrow {
+  float: right;
+  margin-right: 3vw;
+  font-size: 16px;
+}
 
 @media only screen and (max-width: 1000px) {
 
