TP-4 Fixes footer logo size bug.

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -34,7 +34,10 @@ $tp_color--primary: #006bff;
 
 .logos {
     grid-area: logos;
-    max-width: 100%;
+
+    img {
+        max-width: 100%;
+    }
 
 }
 
