--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -16,10 +16,20 @@
     grid-gap: 20px;
     margin: 40px;
 }
+
 .arrow {
-  float: right;
-  margin-right: 3vw;
-  font-size: 16px;
+  font-family: Montserrat, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  color: black;
+  text-align: right;
+  padding-right: 40px;
+  text-transform: uppercase;
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
