Adds padding to stop of footer. Prepends TriplePundit to story titles.

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,7 +6,7 @@ $tp_color--primary: #006bff;
     grid-template-areas: "content contact logos" "legal legal legal";
     max-width: 1366px;
     margin: 0 auto;
-    padding: 0 130px 20px;
+    padding: 20px 130px;
     text-align: left;
     font-family: Montserrat, sans-serif;
 }
